Refactor WebSecurityConfig and add centralized privilege management